[gd_scene load_steps=3 format=2]

[ext_resource path="res://WebRoot.tscn" type="PackedScene" id=1]
[ext_resource path="res://StaticMain.gd" type="Script" id=2]

[node name="StaticMain" type="WebServer"]
script = ExtResource( 2 )

[node name="WebRoot" parent="." instance=ExtResource( 1 )]
www_root_path = "res://www/"

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
alignment = 1

[node name="ExportButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 1010.0
margin_bottom = 291.0
text = "Export"

[node name="OpenFolderButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 295.0
margin_right = 1010.0
margin_bottom = 315.0
text = "Open Export Folder"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/OpenFolderButton" to="." method="_on_OpenFolderButton_pressed"]
